--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1171,6 +1171,7 @@
 		"Digestion":"Пищеварение",
 		"Diaryentry":"Запись дневника",
 		"Newdoctorvisits":"Новые посещения врача",
-		"Newhospitalizations":"Новые диагнозы"
+    "Newhospitalizations":"Новые диагнозы",
+    "EmailExists":"Электронный адрес уже существует, используйте другой адрес электронной почты."
   }
 }
